<resources>
    <string name="app_name">Weather App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_forecast_detail">Weather Detail</string>
    <string name="user_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor eros et tempus dapibus.
        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec cursus tortor eu eros
        condimentum, vel cursus justo consequat. Morbi finibus eros libero, vel placerat dolor laoreet vel. Praesent dictum ullamcorper pellentesque.
        Integer id auctor velit, nec semper est. Proin in nulla ullamcorper, euismod massa quis, vulputate sapien. Nunc varius eget purus et hendrerit.
        Nunc lobortis vulputate maximus. Morbi congue, purus quis varius volutpat, erat velit pulvinar nulla, ac iaculis arcu nisl in quam.</string>
    <string name="weather_info">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature">45 °F</string>
    <string name="daily_temperature">Daily Temperature</string>
    <string name="location">Location</string>
    <string name="summary">Summary</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="enter_latitude">Enter latitude</string>
</resources>
