<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.gooner10.weatherforecast.weatherdetail.Fragments.TodayWeatherFragment">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/cardView_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <TextView
                    android:id="@+id/textView_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/default_padding"
                    android:text="@string/location"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/textView_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/default_padding"
                    android:text="@string/summary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <ImageView
                    android:id="@+id/weather_icon_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/default_padding"
                    android:src="@drawable/undefined"
                    android:transitionName="weatherImage" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/default_padding"
                        android:text="@string/temperature"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <!--<ImageView-->
                        <!--android:id="@+id/imageView_temp_scale"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:layout_weight="3"-->
                        <!--android:background="@drawable/fahrenheit"-->
                        <!--android:padding="@dimen/default_padding" />-->
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/MatchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView_weather"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/daily_temperature"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewDailyWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/MatchText"
            tools:listitem="@layout/daily_weather_row">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

</layout>
